# zorbs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ZORBFILE.md  docker-compose.yml  install.sh  nginx.conf
.github/workflows/: ci.yml  publish.yml
.sqlx/: query-3281ea23ec3f23fa56c5b3a2fbe332a250f150171f0e8bce8427e44dca016868.json  query-81faa5f883c78f6ea37abf892ba8429075e071823b103edb8e3093b71b684154.json  query-8bca4f19ec322abc63cc22300e9ec0feb802643eb2a09997369d7b74247d9b20.json  query-9af887e8e4400f582308b66a91c13449294d4fc5fb9b506c18fb55c1909b3c07.json  query-9ca1697a8da75292a7b3dd4552bd2f20a37a798eeb847cee54863af3d6cc03d9.json  query-9f4f14bb5a8cc1b39103569c25f52d8735cbc1b45953aac9e8722cd63e392d2c.json  query-ad3782c5ab0efbe9de12f608a001fb00619c747fc0d03e442828cf66b32c3e65.json  query-cc13fa43887aed0d2cd2f4f8353cf86520d7fe722937fc2240f9bb4ecf915465.json  query-cdd0878cbb762fa858bb446b14dbc708e52777b364fbf454e4e174a24d463582.json  query-dd96b54ab75843cb0388517152fdb2afa0eb9ceb6f66a601905238c0eb4af405.json  query-de590ca2c4d4cbfe473dd645de93f1bc9c5aec68ef05dd8445dadbfd7dce1d25.json
assets/: zorbs.eps
docs/: LOCAL_SETUP.md  PRODUCTION_DEPLOYMENT.md  SEED_OFFICIAL_PACKAGES.sql
migrations/: 20240219123000_create_zorbs_table.sql  20250227000000_add_provider_to_users.sql  20260223063248_add_github_auth.sql  20260227_add_provider_to_users.sql  20260228120000_add_provider_to_users.sql  20260228150000_add_webauthn_credentials.sql  20260505000000_add_dependencies_to_zorbs.sql
seeds/: 001_stdlib_packages.sql
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  mod.rs  models.rs  plan.rs  registry.rs  routes.rs  state.rs  storage.rs  utils.rs
src/db/: queries.rs
src/handlers/: auth.rs  detail.rs  docs.rs  download.rs  home.rs  mod.rs  publish.rs  resolve.rs
src/models/: mod.rs  user.rs  zorb.rs
src/views/: 404.html  detail.html  docs.html  home.html  mod.rs  publish.html
tests/: api_health.rs  api_packages.rs  api_resolve.rs  api_validation.rs
tests/common/: mod.rs
