[package]
name = "zorbs"
version = "0.1.0"
edition = "2024"
authors = ["Zorbs Team <hi@zorbs.io>"]
description = "The official registry for Zorbs by The Zeta Foundation (zorbs.io)"
license = "MIT"
repository = "https://github.com/murphsicles/zorbs"
homepage = "https://zorbs.io"
documentation = "https://zorbs.io/docs"
readme = "README.md"
keywords = ["zeta", "package-manager", "registry", "zorbs", "zorb"]
categories = ["development-tools::package-managers"]

[dependencies]
axum = { version = "0.8.8", features = ["json", "macros", "tower", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "compression-full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono", "uuid"] }
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

# Publishing
maud = "0.27.0"
toml = "1.0.3"
tar = "0.4.44"
flate2 = "1.0"
semver = "1.0"

# CLI
clap = { version = "4.5.59", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["multipart"] }

[[bin]]
name = "zorbs"
path = "src/main.rs"

[[bin]]
name = "zorb"
path = "src/bin/zorb.rs"
